tgthrProgramManagement/force-app/main/default/objects/CareTeamMember__c/CareTeamMember__c.object-meta.xml
<CustomObject>
    <description>Junction object linking a User to a Case as part of the Care Team. Lightweight alternative to standard Case Teams.</description>
    <label>Care Team Member</label>
    <nameField>
        <displayFormat>CTM-{0000}</displayFormat>
        <label>Care Team Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Care Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>