tgthrProgramManagement/force-app/main/default/objects/CareTeamMember__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <description>The Case this Care Team Member belongs to</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Care Team Members</relationshipLabel>
    <relationshipName>Care_Team_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>