tgthrProgramManagement/force-app/main/default/objects/CareTeamMember__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>The role this user plays on the Care Team (e.g., Case Manager, Clinician, Peer Support). Defaults to the User&apos;s Title if not specified.</description>
    <label>Role</label>
    <length>100</length>
    <type>Text</type>
</CustomField>