tgthrProgramManagement/force-app/main/default/objects/CareTeamMember__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The User assigned to this Case&apos;s Care Team</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Care Team Memberships</relationshipLabel>
    <relationshipName>Care_Team_Memberships</relationshipName>
    <type>Lookup</type>
</CustomField>